# test-dependabot

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
test_dependabot/: hello_world.py
