[tool.poetry]
name = "test-dependabot"
version = "0.1.0"
description = ""
authors = ["angiexiong <363068948@qq.com>"]
readme = "README.md"
packages = [{include = "test_dependabot"}]

[tool.poetry.dependencies]
# Dependabot will update the version to ~3.11
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
